[package]
name = "cargo-gc-bin"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Wayne Xia <waynestxia@gmail.com>"]
readme = "README.md"
repository = "https://github.com/waynexia/cargo-gc"
description = """
Garbage collect outdated cargo build artifacts.
"""

[dependencies]
cargo_metadata = "0.17.0"
clap = { version = "4.3.24", features = ["derive"] }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"

[[bin]]
name = "cargo-gc"
path = "src/main.rs"
